# MoexTradingAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
algopack_analyst/: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements.txt
algopack_analyst/analytics/: adaptive_scoring.py  anomaly.py  concentration.py  correlations.py  multi_timeframe.py  order_flow.py  orderbook.py  patterns.py  regime.py  scoring.py  sentiment.py  technical.py  volume_profile.py
algopack_analyst/api/: routes.py  schemas.py
algopack_analyst/data_collectors/: futoi.py  hi2.py  index_data.py  mega_alerts.py  multi_tf.py  realtime.py  scheduler.py  super_candles.py  tape_analyzer.py
algopack_analyst/llm/: client.py  prompts.py
algopack_analyst/storage/: db.py  feature_store.py  models.py  repository.py  snapshot.py
algopack_analyst/tests/: test_moex_client.py  test_orderbook.py  test_scoring.py  test_technical.py
algopack_analyst/utils/: logger.py  moex_client.py  retry.py
app/: __init__.py  backtest.py  config.py  logging_config.py  main.py
app/api/: __init__.py  schemas.py  server.py
app/clients/: __init__.py  arena_client.py  moex_client.py  polza_client.py
app/features/: __init__.py  anomaly_detector.py  feature_builder.py  indicators.py
app/ingestion/: __init__.py  (+3 more)
tests/: conftest.py  test_advisor_http.py  test_arena_forbidden.py  test_arena_portfolio_resolver.py  test_indicators.py  test_iss_parser.py  test_llm_fallback.py  test_recommendation.py  test_risk.py  test_scoring.py
(+13 files in other folders)
