[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moex-tech-agent"
version = "0.1.0"
description = "Technical advisor agent for MOEX intraday long-only trading (advisory only, never trades)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "MoexTradingAgent" }]
dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "httpx>=0.27,<1.0",
    "requests>=2.31,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<3.0",
    "python-dateutil>=2.8,<3.0",
    "openai>=1.30,<2.0",
    "orjson>=3.9,<4.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
    "tenacity>=8.2,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
]

[project.scripts]
moex-tech-agent = "app.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
